Retry sync (again)

--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: tf-model-deployment
   namespace: default
+  annotations:
+    lastUpdated: "2025-01-11" # Edit to trigger ArgoCD sync
 spec:
   replicas: 2
   selector:
